--- a/css/animation.css
+++ b/css/animation.css
@@ -79,22 +79,97 @@
     }
 }
 
-.ex-12-button:hover  {
-    animation: border-move 1s linear;
+.ex-12-button:hover .ex-12-top-white {
+    animation: border-top 2s linear;
 }
 
-@keyframes border-move {
+@keyframes border-top {
     0%{
-        left: 20%;
+        left: 10%;
     }
     50%{
         left: calc(100% - 60px);
     }
     100%{
-        left: 20%;
+        left: 10%;
     }
 }
 
-.ex-13-button:hover {
-
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: border-bottom 2s linear;
 }
+
+@keyframes border-bottom {
+    0%{
+        right: 20%;
+    }
+    50%{
+        right: calc(100% - 60px);
+    }
+    100%{
+        right: 20%;
+    }
+}
+
+.ex-13-button:hover .ex-13-top-white{
+    animation: border-top-13 2s linear;
+}
+
+@keyframes border-top-13 {
+    0%{
+        left: 10%;
+        top: -10px;
+    }
+    25%{
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+    40%{
+        left: calc(100% - 30px);
+        top: 100%;
+    }
+    60% {
+        left: 0;
+        top: 100%;
+    }
+    85% {
+        left: -15px;
+        top: -10px;
+    }
+    100% {
+        left: 10%;
+        top: -10px;
+    }
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: border-bottom-13 2s linear;
+}
+
+@keyframes border-bottom-13 {
+    0% {
+        right: 20%;
+        bottom: -10px;
+    }
+    25% {
+        right: calc(100% - 30px);
+        bottom: -10px;
+    }
+    40% {
+        right: calc(100% - 30px);
+        bottom: 100%;
+    }
+    60% {
+        right: 0;
+        bottom: 100%;
+    }
+    85% {
+        right: -15px;
+        bottom: -10px;
+    }
+    100% {
+        right: 20%;
+        bottom: -10px;
+    }
+}
+
